--- a/assets/css/common/footer.css
+++ b/assets/css/common/footer.css
@@ -5,16 +5,12 @@
 }
 
 .footer {
-    max-width: calc(var(--main-width) + var(--gap) * 2);
+    max-width: calc(var(--main-width) + var(--gap));
     margin: auto;
     padding: calc((var(--footer-height) - var(--gap)) / 2) var(--gap);
     text-align: center;
     line-height: 24px;
     background: var(--main-body-bg);
-}
-
-body.dark .footer {
-    background: var(--main-body-bg-dark);
 }
 
 .footer span {
