--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -2,22 +2,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: calc(var(--nav-width) + var(--gap) * 2);
+    max-width: calc(var(--nav-width) + var(--gap));
     margin-inline-start: auto;
     margin-inline-end: auto;
     line-height: var(--header-height);
     margin-block-start: 5px;
-    background-image: url(/images/classy-fabric.png);
-    background-color: rgb(250, 250, 250);
-}
-
-body.dark .nav {
-    background-color: rgb(90, 90, 90);
-}
-
-body.dark .main {
-    background: var(--main-body-bg-dark);
-    margin-block-start: 10px;
+    /* background-image: url(/images/classy-fabric.png); */
+    background-color: var(--nav-color);
 }
 
 .nav a {
