--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -1,15 +1,22 @@
 .main {
     position: relative;
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
-    max-width: calc(var(--main-width) + var(--gap) * 2);
+    max-width: calc(var(--main-width) + var(--gap));
     margin: auto;
     padding: var(--gap);
     margin-block-start: 10px;
     background: var(--main-body-bg);
 }
 
+@media (min-width: 768px) {
+    .main {
+        padding-left: calc(var(--gap) * 2);
+        padding-right: calc(var(--gap) * 2);
+    }
+}
+
 .page-header h1 {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .pagination {
