--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -7,6 +7,11 @@
     margin: var(--gap) 0 calc(var(--gap) * 2) 0;
 }
 
+.home-info.first-entry {
+    justify-content: flex-start;
+    min-height: initial;
+}
+
 .first-entry .entry-header {
     overflow: hidden;
     display: -webkit-box;
@@ -15,7 +20,7 @@
 }
 
 .first-entry .entry-header h1 {
-    font-size: 34px;
+    font-size: 30px;
     line-height: 1.3;
 }
 
@@ -52,8 +57,7 @@
 }
 
 .entry-header h2 {
-    font-size: 24px;
-    line-height: 1.3;
+    font-size: 20px;
 }
 
 .entry-content {
