--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -25,11 +25,11 @@ h6 {
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.6;
     word-break: break-word;
     background-color: var(--theme);
-    background-image: url(/images/cartographer.png)
+    background-image: var(--bg-img);
 }
 
 article,
