fix: padding in blockquotes

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -211,7 +211,7 @@
 
 .post-content blockquote {
     margin: 20px 0;
-    padding: 0 14px;
+    padding: 14px;
     border-inline-start: 3px solid var(--primary);
     background: var(--entry);
 }
